--- a/aboutus.html
+++ b/aboutus.html
@@ -18,19 +18,24 @@
 <body>
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
         <div class="container">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
-                <span class="navbar-toggler-icon"></span>                   
-            </button>
+            <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="41"></a>
             <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
+
                     <li class="nav-item"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
                     <li class="nav-item active"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
-            </div>
 
+
+
+            </div>
         </div>
 
 
@@ -67,6 +72,11 @@
                     in Hong Kong. Featuring four of the best three-star Michelin chefs in the world, you never know what will arrive on your plate the next time you visit us.</p>
                 <p>The restaurant traces its humble beginnings to <em>The Frying Pan</em>, a successful chain started by our CEO, Mr. Peter Pan, that featured for the first time the world's best cuisines in a pan.</p>
             </div>
+            <div class="col-12 col-sm-12 col-md-12">
+                <hr>
+
+            </div>
+
             <div>
             </div>
         </div>
@@ -112,50 +122,50 @@
                     </div>
                 </div>
                 <div class="row row-content">
-                    <div class="col-12 col-sm-9">
+                    <div class="col-12 col-sm-12">
                         <h2>Facts &amp; Figures</h2>
-                    </div>
-                    <div class="col-12 col-sm-3">
-                    </div>
-                    <div class="table-responsive">
-                        <table class="table table-striped">
-                            <thead class="thead-dark">
-                                <tr>
-                                    <th>&nbsp;</th>
-                                    <th>2013</th>
-                                    <th>2014</th>
-                                    <th>2015</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <th>Employees</th>
-                                    <td>15</td>
-                                    <td>30</td>
-                                    <td>40</td>
-                                </tr>
-                                <tr>
-                                    <th>Guests Served</th>
-                                    <td>15000</td>
-                                    <td>45000</td>
-                                    <td>100,000</td>
-                                </tr>
-                                <tr>
-                                    <th>Special Events</th>
-                                    <td>3</td>
-                                    <td>20</td>
-                                    <td>45</td>
-                                </tr>
-                                <tr>
-                                    <th>Annual Turnover</th>
-                                    <td>$251,325</td>
-                                    <td>$1,250,375</td>
-                                    <td>~$3,000,000</td>
-                                </tr>
-                            </tbody>
-                        </table>
+                        <div class="table-responsive">
+                            <table class="table table-striped">
+                                <thead class="thead-dark">
+                                    <tr>
+                                        <th>&nbsp;</th>
+                                        <th>2013</th>
+                                        <th>2014</th>
+                                        <th>2015</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <th>Employees</th>
+                                        <td>15</td>
+                                        <td>30</td>
+                                        <td>40</td>
+                                    </tr>
+                                    <tr>
+                                        <th>Guests Served</th>
+                                        <td>15000</td>
+                                        <td>45000</td>
+                                        <td>100,000</td>
+                                    </tr>
+                                    <tr>
+                                        <th>Special Events</th>
+                                        <td>3</td>
+                                        <td>20</td>
+                                        <td>45</td>
+                                    </tr>
+                                    <tr>
+                                        <th>Annual Turnover</th>
+                                        <td>$251,325</td>
+                                        <td>$1,250,375</td>
+                                        <td>~$3,000,000</td>
+                                    </tr>
+                                </tbody>
+                            </table>
 
+                        </div>
                     </div>
+
+
                     <div class="col-12 col-sm-6">
                         <div class="card">
                             <h3 class="card-header bg-primary text-white">Facts At a Glance</h3>
@@ -236,6 +246,10 @@
         </div>
     </footer>
 
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 </html>
