--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
         <div class="container">
             <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="41"></a>
-            <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
+            <!-- <a class="navbar-brand" href="#">Ristorante Con Fusion</a> -->
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                   <span class="navbar-toggler-icon"></span>
@@ -59,6 +59,11 @@
                         <img src="img/logo.png" class="img-fluid">
                     </div>
                 </div>
+                <div class="col-12 col-sm-3">
+                    <div class="col-12 col-sm align-self-center">
+                        <a href="#form" class="btn-sm btn-warning">Reserve Table</a>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
@@ -78,9 +83,10 @@
                 <div class="media">
                     <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="Uthappizza">
                     <div class="media-body">
-                        <span class="badge badge-pill badge-secondary">$4.99</span>
+                        <!-- <span class="badge badge-pill badge-secondary">$4.99</span> -->
                         <h2 class="mt-0">Uthappizza
                             <span class="badge badge-danger">HOT</span>
+                            <span class="badge badge-pill badge-secondary">$4.99</span>
                         </h2>
                         <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
                     </div>
@@ -90,19 +96,22 @@
         </div>
 
 
-        <div class="row row-content d-flex flex-row-reverse">
+        <div class="row row-content d-flex ">
             <div class="col-12 col-sm-4 col-md-3">
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
                 <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/alberto.png" alt="Alberto Somayya">
+                    <!-- <img class="d-flex mr-3 img-thumbnail align-self-center " src="img/buffet.png" alt="Alberto Somayya "> -->
                     <div class="media-body">
-                        <h2 class="mt-0">Alberto Somayya</h2>
+                        <h2 class="mt-0">Alberto Somayya
+                            <span class="badge badge-danger">NEW</span>
+                        </h2>
                         <h4>Executive Chef</h4>
                         <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences.
                         </p>
                     </div>
+                    <img class="d-flex mr-3 img-thumbnail align-self-center " src="img/buffet.png" alt="Alberto Somayya ">
                 </div>
 
             </div>
@@ -114,7 +123,7 @@
             </div>
             <div class="col col-sm col-md">
                 <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/buffet.png" alt="Alberto Somayya">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/alberto.png" alt="Alberto Somayya">
                     <div class="media-body">
                         <h2 class="mt-0">Alberto Somayya</h2>
                         <h4>Executive Chef</h4>
@@ -123,6 +132,46 @@
                 </div>
             </div>
         </div>
+        <!-- lab 2 -->
+        <div class="form row row-content d-flex justify-content-center">
+            <div class="head-form col-12 bg-warning">
+                <h3 class="text-light">Reserve a Table</h3>
+            </div>
+            <div class="col-12 col-md-9">
+                <!-- Form goes here -->
+                <form id="form">
+                    <div class="form-group row">
+                        <label for="firstname" class="col-md-2 col-form-label">Number of Guests</label>
+                        <div class="col-md-10">
+                            <input type="radio" name="ratio-group"> <label for="">1</label>
+                            <input type="radio" name="ratio-group"> <label for="">2</label>
+                            <input type="radio" name="ratio-group"> <label for="">3</label>
+                            <input type="radio" name="ratio-group"> <label for="">4</label>
+                            <input type="radio" name="ratio-group"> <label for="">5</label>
+                            <input type="radio" name="ratio-group"> <label for="">6</label>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="date-time" class="col-12 col-md-2 col-form-label">Date and Time</label>
+                        <div class="col-6 col-md-5">
+                            <input type="tel" class="form-control" id="areacode" name="areacode" placeholder="Date">
+                        </div>
+                        <div class="col-6 col-md-5">
+                            <input type="tel" class="form-control" id="telnum" name="telnum" placeholder="Time">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="offset-md-2 col-md-10">
+                            <button type="submit" class="btn btn-primary">Reserve</button>
+                        </div>
+                    </div>
+                </form>
+
+            </div>
+            <div class="col-12 col-md">
+            </div>
+        </div>
+        <!-- lab 2 -->
     </div>
 
     <footer class="footer bg-dark text-white">
